# tucker-decomposition

./: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp  out.txt
include/: COOTensor3.cuh  CSFTensor3.cuh  DenseMatrix.cuh  SparseTensor2.cuh  SparseTensor3.cuh  contraction_kernels.cuh  helper_cuda.cuh  includes.cuh  macros.cuh  numpy_verify.cuh  parse_args.hpp  svd.cuh  timer.h  ttm.cuh  tucker.cuh
scripts/: tucker.sh
src/: CMakeLists.txt  COOTensor3.cu  CSFTensor3.cu  DenseMatrix.cu  SparseTensor2.cu  SparseTensor3.cu  contraction_kernels.cu  numpy_verify.cu  parse_args.cpp  svd.cu  ttm.cu  tucker.cu
tests/: CMakeLists.txt  compression_COO_test.cpp  decompress.cpp  decompress.hpp  first_contraction_test.cpp  host_contractions.cpp  host_contractions.hpp  second_contraction_test.cpp
